--- a/app/styles/partials/_home_p1_desktop.scss
+++ b/app/styles/partials/_home_p1_desktop.scss
@@ -7,18 +7,19 @@
     }
 }
 
-//* Media Querys para Desktop ✌🏼
+//* Media Querys para Desktop 
 
 @media screen and (min-width:1280px) {
     #container-general__HomeP1-DESKTOP {
-        /* border: 2px solid green; */
+        border: 2px solid green;
         height: 90vh;
         display: flex;
+        justify-content: center;
     }
 
     //? Clases Contenedor 1
-    .contenedor-interior__HomeP1-DESKTOP:nth-of-type(1) {
-        /* border: 2px solid red; */
+    .contenedor-interior__HomeP1-DESKTOP-1 {
+        /* border: 2px solid sandybrown; */
         display: flex;
         width: 60%;
     }
@@ -36,46 +37,10 @@
         margin-left: 6rem;
     }
 
-    #Image-Main__HomeP1-DESKTOP {
-        /* border: 2px solid maroon; */
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-        transition: .6s ease;
-        pointer-events: none;
-        z-index: 2;
-    }
-
-    #Image-Main-Second__HomeP1-DESKTOP {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-        pointer-events: none;
-        z-index: 2;
-        display: none;
-    }
-
-    /* (Animacion de la primer imagen) */
-    .TranslateElement {
-        transition: 2s ease;
-        transform: translate(350px, 0px);
-        width: 35% !important;
-        object-position: -105px;
-    }
-
-    /* (Animacion de la segunda imagen) */
-    .TranslateAndShowElement-2 {
-        transition: 2s ease;
-        display: block !important;
-        transform: translate(370px, 0px);
-        width: 35% !important;
-        object-position: -194px;
-        object-fit: cover;
-    }
 
     //? Clases Contenedor 2
-    .contenedor-interior__HomeP1-DESKTOP:nth-of-type(2) {
-        /* border: 2px solid blue; */
+    .contenedor-interior__HomeP1-DESKTOP-2 {
+        /* border: 2px solid red; */
         display: flex;
         justify-content: center;
         align-items: center;
