--- a/app/styles/styles.scss
+++ b/app/styles/styles.scss
@@ -10,3 +10,4 @@
 @import './partials/footer';
 @import './partials/home_p1_desktop';
 @import './partials/arabic_spanish_text';
+@import'./partials/grid_homeP1_D'
