--- a/app/styles/partials/_home_p1_desktop.scss
+++ b/app/styles/partials/_home_p1_desktop.scss
@@ -11,47 +11,19 @@
 
 @media screen and (min-width:1280px) {
     #container-general__HomeP1-DESKTOP {
-        border: 2px solid green;
+        /* border: 2px solid green; */
         height: 90vh;
         display: flex;
-        justify-content: center;
-    }
-
-    //? Clases Contenedor 1
-    .contenedor-interior__HomeP1-DESKTOP-1 {
-        /* border: 2px solid sandybrown; */
-        display: flex;
-        width: 60%;
-    }
-
-    #container-image-HomeP1-DESKTOP {
-        /* border: 2px solid gray; */
-        height: 90%;
-        width: 50%;
-        margin: 2rem;
-        z-index: 1;
-        display: flex;
-        justify-content: center;
         align-items: center;
-        cursor: pointer;
-        margin-left: 6rem;
-    }
-
-
-    //? Clases Contenedor 2
-    .contenedor-interior__HomeP1-DESKTOP-2 {
-        /* border: 2px solid red; */
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-        width: 40%;
+        justify-content: space-around;
+        padding: 1rem;
     }
 
     #title-IgnacioARG__HomeP1-DESKTOP {
         font-size: 3.5rem;
         font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-        font-weight: bold;
+        font-weight: 500;
+        z-index: 3;
     }
 
 }
