--- a/app/styles/partials/_homeP2_d.scss
+++ b/app/styles/partials/_homeP2_d.scss
@@ -2,28 +2,66 @@
 
 @media screen and (min-width:320px) and (max-width:1280px) {
     #container-general__HomeP2-D {
-        background-color: #141414;
+        display: none;
+    }
+}
+
+@media screen and (min-width:1280px) {
+    #container-general__HomeP2-D {
+        background-color: #18181b;
         height: 90vh;
         display: flex;
         align-items: center;
-        z-index: 2;
+        z-index: 10;
     }
 
     .div-interiores__HomeP2-D:nth-child(1) {
-        /* background-color: #262626; */
+        /*  border: 2px solid red; */
+        z-index: 5;
         width: 25%;
-        z-index: 100;
         height: 80%;
         width: 30%;
-      /*   border-top: 2px solid grey; */
-        border-right: 2px solid grey;
+        /*   border-top: 2px solid grey; */
+        border-right: 1.5px solid grey;
         margin-left: 2rem;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: center;
     }
 
     .div-interiores__HomeP2-D:nth-child(2) {
         /* border: 2px solid brown; */
         width: 65%;
         height: 80%;
-        z-index: 100;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .title-skill__HomeP2-D {
+        color: #a3a3a3;
+        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        font-size: 1.5rem;
+        transition: .5s ease;
+    }
+
+    .title-skill__HomeP2-D:hover {
+        color: #d4d4d4;
+        border-left: 1px solid orangered;
+        padding: 5px;
+        margin-left: 2px;
+    }
+
+    .title-eachSkill__HomeP2-D {
+        color: #a3a3a3;
+        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        font-size: 1.8rem;
+    }
+
+    #container-eachSkill__HomeP2-D {
+        /* border: 2px solid red; */
+        width: 100%;
+        height: 100%;
     }
 }
