Correcion en z index de home P2 (DESKTOP)

--- a/app/styles/partials/_home_p2.scss
+++ b/app/styles/partials/_home_p2.scss
@@ -2,9 +2,9 @@
 
 @media screen and (min-width:360px) {
     #container-general__Home__P2 {
-        border: 2px solid green;
+        /* border: 2px solid green; */
         background: linear-gradient(to top left, rgb(12, 12, 12), rgb(0, 0, 0));
-        z-index: 1;
+        z-index: 2;
         border-top: 5px solid black;
     }
 
