--- a/app/styles/partials/_homeP2_d.scss
+++ b/app/styles/partials/_homeP2_d.scss
@@ -8,11 +8,22 @@
 
 @media screen and (min-width:1280px) {
     #container-general__HomeP2-D {
-        background-color: #18181b;
+        /* border: 2px solid greenyellow; */
         height: 90vh;
         display: flex;
-        align-items: center;
+        z-index: 2;
+        //?Contenedor general - usado para burlar el z index
+    }
+
+    #subContenedorGeneral_HomeP2-D {
+        /* border: 2px solid red; */
+        width: 100%;
+        height: 100%;
+        background-color: #18181b;
         z-index: 10;
+        display: flex;
+        align-items: center;
+        //! Contenedor general - Por problematicas con z index
     }
 
     .div-interiores__HomeP2-D:nth-child(1) {
@@ -44,6 +55,7 @@
         font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
         font-size: 1.5rem;
         transition: .5s ease;
+        margin-left: 4px;
     }
 
     .title-skill__HomeP2-D:hover {
