--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -617,10 +617,10 @@
 
 @media screen and (min-width: 360px) {
   #container-general__Home__P2 {
-    border: 2px solid green;
+    /* border: 2px solid green; */
     background: -webkit-gradient(linear, right bottom, left top, from(#0c0c0c), to(black));
     background: linear-gradient(to top left, #0c0c0c, black);
-    z-index: 1;
+    z-index: 2;
     border-top: 5px solid black;
   }
   #titulo-habilidades__Home-P2 {
@@ -737,7 +737,7 @@
     min-height: 100vh;
     background-color: white;
     border: none;
-    z-index: 1;
+    z-index: 2;
   }
   #titulo-proyectos__Home-P3 {
     font-size: 25px;
@@ -1434,7 +1434,7 @@
 
 @media screen and (min-width: 1280px) {
   #container-general__HomeP1-DESKTOP {
-    /* border: 2px solid green; */
+    /*       border: 2px solid green; */
     height: 90vh;
     display: -webkit-box;
     display: -ms-flexbox;
@@ -1573,15 +1573,25 @@
 
 @media screen and (min-width: 1280px) {
   #container-general__HomeP2-D {
-    background-color: #18181b;
+    /* border: 2px solid greenyellow; */
     height: 90vh;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    z-index: 2;
+  }
+  #subContenedorGeneral_HomeP2-D {
+    /* border: 2px solid red; */
+    width: 100%;
+    height: 100%;
+    background-color: #18181b;
+    z-index: 10;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
-    z-index: 10;
   }
   .div-interiores__HomeP2-D:nth-child(1) {
     /*  border: 2px solid red; */
@@ -1626,6 +1636,7 @@
     font-size: 1.5rem;
     -webkit-transition: .5s ease;
     transition: .5s ease;
+    margin-left: 4px;
   }
   .title-skill__HomeP2-D:hover {
     color: #d4d4d4;
