--- a/app/styles/partials/_homeP2_d.scss
+++ b/app/styles/partials/_homeP2_d.scss
@@ -9,7 +9,7 @@
 @media screen and (min-width:1280px) {
     #container-general__HomeP2-D {
         /* border: 2px solid greenyellow; */
-        height: 90vh;
+        height: 80vh;
         display: flex;
         z-index: 2;
         //?Contenedor general - usado para burlar el z index
@@ -19,7 +19,7 @@
         /* border: 2px solid red; */
         width: 100%;
         height: 100%;
-        background-color: #18181b;
+        background-color: #0c0a09;
         z-index: 10;
         display: flex;
         align-items: center;
@@ -41,6 +41,7 @@
         align-items: center;
     }
 
+    //Segundo Contenedor - donde se encuentran las skill
     .div-interiores__HomeP2-D:nth-child(2) {
         /* border: 2px solid brown; */
         width: 65%;
@@ -55,26 +56,71 @@
         font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
         font-size: 1.5rem;
         transition: .5s ease;
-        margin-left: 4px;
+        padding-left: 8px;
     }
 
     .title-skill__HomeP2-D:hover {
         color: #d4d4d4;
-        border-left: 1px solid orangered;
-        padding: 5px;
-        margin-left: 2px;
+        border-left: 1.5px groove #9333ea;
+        cursor: pointer;
     }
 
     .title-eachSkill__HomeP2-D {
         color: #a3a3a3;
         font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
         font-size: 1.8rem;
+        position: relative;
     }
 
-    
-    #container-eachSkill__HomeP2-D {
-        /* border: 2px solid red; */
+    /* .title-eachSkill__HomeP2-D::after {
+        content: '';
+        position: absolute;
+        left: 0;
+        right: 0;
+        bottom: -4.3px;
+        width: 40%;
+        border-bottom: 3px groove #9333ea;
+        margin: 0 auto;
+    } */
+
+    //? Contenedor donde se renderizan las skills
+    #container-second-eachSkill__HomeP2-D {
+        /* border: 1px solid red; */
         width: 100%;
         height: 100%;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        justify-content: space-around;
     }
+
+    .container-per-each-skill__HomeP2-D {
+        /* border: 1px groove gray; */
+        text-align: center;
+        width: calc(25%);
+        height: 50%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .elem-nombre__HomeP2-D {
+        color: white;
+        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        font-weight: 300;
+        font-size: 18px;
+    }
+
+    .elem-logo__HomeP2-D {
+        margin-bottom: 5px;
+    }
+
+    .logo-skill:hover {
+        transition: .5s ease-in-out;
+        transform: scale(1.2);
+        cursor: pointer;
+        color: var(--color-hex) !important;
+    }
+
 }
