--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -207,7 +207,7 @@
   }
 }
 
-@media screen and (min-width: 900px) {
+@media screen and (min-width: 1280px) {
   #container-general__navbar-mobile {
     display: none;
   }
@@ -216,13 +216,13 @@
   }
 }
 
-@media screen and (min-width: 320px) and (max-width: 900px) {
+@media screen and (min-width: 320px) and (max-width: 1280px) {
   #container-general__navbar-desktop {
     display: none;
   }
 }
 
-@media screen and (min-width: 900px) {
+@media screen and (min-width: 1280px) {
   #container-general__navbar-desktop {
     background-color: #141414;
     height: 11vh;
@@ -236,7 +236,7 @@
         -ms-flex-pack: justify;
             justify-content: space-between;
     width: 100%;
-    z-index: 10;
+    z-index: 11;
     position: -webkit-sticky;
     position: sticky;
     top: 0;
@@ -610,7 +610,6 @@
 
 @media screen and (min-width: 1280px) {
   #container-general__Home_P1 {
-    border: 2px solid red;
     display: none;
   }
 }
@@ -1574,7 +1573,7 @@
 @media screen and (min-width: 1280px) {
   #container-general__HomeP2-D {
     /* border: 2px solid greenyellow; */
-    height: 90vh;
+    height: 80vh;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -1584,7 +1583,7 @@
     /* border: 2px solid red; */
     width: 100%;
     height: 100%;
-    background-color: #18181b;
+    background-color: #0c0a09;
     z-index: 10;
     display: -webkit-box;
     display: -ms-flexbox;
@@ -1636,23 +1635,79 @@
     font-size: 1.5rem;
     -webkit-transition: .5s ease;
     transition: .5s ease;
-    margin-left: 4px;
+    padding-left: 8px;
   }
   .title-skill__HomeP2-D:hover {
     color: #d4d4d4;
-    border-left: 1px solid orangered;
-    padding: 5px;
-    margin-left: 2px;
+    border-left: 1.5px groove #9333ea;
+    cursor: pointer;
   }
   .title-eachSkill__HomeP2-D {
     color: #a3a3a3;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 1.8rem;
+    position: relative;
   }
-  #container-eachSkill__HomeP2-D {
-    /* border: 2px solid red; */
+  /* .title-eachSkill__HomeP2-D::after {
+        content: '';
+        position: absolute;
+        left: 0;
+        right: 0;
+        bottom: -4.3px;
+        width: 40%;
+        border-bottom: 3px groove #9333ea;
+        margin: 0 auto;
+    } */
+  #container-second-eachSkill__HomeP2-D {
+    /* border: 1px solid red; */
     width: 100%;
     height: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+  }
+  .container-per-each-skill__HomeP2-D {
+    /* border: 1px groove gray; */
+    text-align: center;
+    width: calc(25%);
+    height: 50%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .elem-nombre__HomeP2-D {
+    color: white;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 300;
+    font-size: 18px;
+  }
+  .elem-logo__HomeP2-D {
+    margin-bottom: 5px;
+  }
+  .logo-skill:hover {
+    -webkit-transition: .5s ease-in-out;
+    transition: .5s ease-in-out;
+    -webkit-transform: scale(1.2);
+            transform: scale(1.2);
+    cursor: pointer;
+    color: var(--color-hex) !important;
   }
 }
 /*# sourceMappingURL=styles.css.map */
