--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -1639,8 +1639,10 @@
   }
   .title-skill__HomeP2-D:hover {
     color: #d4d4d4;
-    border-left: 1.5px groove #9333ea;
     cursor: pointer;
+  }
+  .border-left-class {
+    border-left: 1.5px groove #9333ea;
   }
   .title-eachSkill__HomeP2-D {
     color: #a3a3a3;
@@ -1648,16 +1650,16 @@
     font-size: 1.8rem;
     position: relative;
   }
-  /* .title-eachSkill__HomeP2-D::after {
-        content: '';
-        position: absolute;
-        left: 0;
-        right: 0;
-        bottom: -4.3px;
-        width: 40%;
-        border-bottom: 3px groove #9333ea;
-        margin: 0 auto;
-    } */
+  .title-eachSkill__HomeP2-D::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: -5px;
+    width: 38%;
+    border-bottom: 3px groove #9333ea;
+    margin: 0 auto;
+  }
   #container-second-eachSkill__HomeP2-D {
     /* border: 1px solid red; */
     width: 100%;
@@ -1695,7 +1697,7 @@
   .elem-nombre__HomeP2-D {
     color: white;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-weight: 300;
+    font-weight: 400;
     font-size: 18px;
   }
   .elem-logo__HomeP2-D {
