--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -614,6 +614,34 @@
   }
 }
 
+@media screen and (min-width: 320px) and (max-width: 1280px) {
+  #container-general__HomeP1-DESKTOP {
+    display: none;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  #container-general__HomeP1-DESKTOP {
+    /*       border: 2px solid green; */
+    height: 90vh;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    padding: 1rem;
+  }
+  #title-IgnacioARG__HomeP1-DESKTOP {
+    font-size: 3.5rem;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 500;
+    z-index: 3;
+  }
+}
+
 @media screen and (min-width: 360px) {
   #container-general__Home__P2 {
     /* border: 2px solid green; */
@@ -727,6 +755,155 @@
 @media screen and (min-width: 1280px) {
   #container-general__Home__P2 {
     display: none;
+  }
+}
+
+@media screen and (min-width: 320px) and (max-width: 1280px) {
+  #container-general__HomeP2-D {
+    display: none;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  #container-general__HomeP2-D {
+    /* border: 2px solid greenyellow; */
+    height: 80vh;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    z-index: 2;
+  }
+  #subContenedorGeneral_HomeP2-D {
+    /* border: 2px solid red; */
+    width: 100%;
+    height: 100%;
+    background-color: #0c0a09;
+    z-index: 10;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .div-interiores__HomeP2-D:nth-child(1) {
+    /*  border: 2px solid red; */
+    z-index: 5;
+    width: 25%;
+    height: 80%;
+    width: 30%;
+    /*   border-top: 2px solid grey; */
+    border-right: 1.5px solid grey;
+    margin-left: 2rem;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .div-interiores__HomeP2-D:nth-child(2) {
+    /* border: 2px solid brown; */
+    width: 65%;
+    height: 80%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .title-skill__HomeP2-D {
+    color: #a3a3a3;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 1.5rem;
+    -webkit-transition: .5s ease;
+    transition: .5s ease;
+    padding-left: 8px;
+  }
+  .title-skill__HomeP2-D:hover {
+    color: #d4d4d4;
+    cursor: pointer;
+  }
+  .border-left-class {
+    border-left: 1.5px groove #9333ea;
+  }
+  .title-eachSkill__HomeP2-D {
+    color: #a3a3a3;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 1.8rem;
+    position: relative;
+  }
+  .title-eachSkill__HomeP2-D::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: -5px;
+    width: 38%;
+    border-bottom: 3px groove #9333ea;
+    margin: 0 auto;
+  }
+  #container-second-eachSkill__HomeP2-D {
+    /* border: 1px solid red; */
+    width: 100%;
+    height: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+  }
+  .container-per-each-skill__HomeP2-D {
+    /* border: 1px groove gray; */
+    text-align: center;
+    width: calc(25%);
+    height: 50%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .elem-nombre__HomeP2-D {
+    color: white;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 400;
+    font-size: 18px;
+  }
+  .elem-logo__HomeP2-D {
+    margin-bottom: 5px;
+  }
+  .logo-skill:hover {
+    -webkit-transition: .5s ease-in-out;
+    transition: .5s ease-in-out;
+    -webkit-transform: scale(1.2);
+            transform: scale(1.2);
+    cursor: pointer;
+    color: var(--color-hex) !important;
   }
 }
 
@@ -927,8 +1104,7 @@
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
-    position: -webkit-sticky;
-    position: sticky;
+    position: absolute;
     right: 44rem;
     gap: 1.5rem;
   }
@@ -972,6 +1148,33 @@
   }
   #titulo-ver-mas__Home-P3 {
     font-size: 1.3rem;
+  }
+}
+
+@media screen and (min-width: 820px) {
+  .container-refs__Home-P3 {
+    right: 47rem;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  #container-general__Home-P3 {
+    display: none;
+  }
+}
+
+@media screen and (min-width: 320px) and (max-width: 1280px) {
+  #contenedor-general__HomeP3-D {
+    display: none;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  #contenedor-general__HomeP3-D {
+    display: block;
+    border: 2px solid greenyellow;
+    height: 100vh;
+    z-index: 3;
   }
 }
 
@@ -1425,34 +1628,6 @@
   }
 }
 
-@media screen and (min-width: 320px) and (max-width: 1280px) {
-  #container-general__HomeP1-DESKTOP {
-    display: none;
-  }
-}
-
-@media screen and (min-width: 1280px) {
-  #container-general__HomeP1-DESKTOP {
-    /*       border: 2px solid green; */
-    height: 90vh;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -ms-flex-pack: distribute;
-        justify-content: space-around;
-    padding: 1rem;
-  }
-  #title-IgnacioARG__HomeP1-DESKTOP {
-    font-size: 3.5rem;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-weight: 500;
-    z-index: 3;
-  }
-}
-
 @media screen and (min-width: 1280px) {
   .container-languaje-ArabicSpanish__HomeP1 {
     /* border: 2px solid red; */
@@ -1561,155 +1736,6 @@
   .image-right__HomeP1-DESKTOP:nth-child(2) {
     -o-object-position: -18px;
        object-position: -18px;
-  }
-}
-
-@media screen and (min-width: 320px) and (max-width: 1280px) {
-  #container-general__HomeP2-D {
-    display: none;
-  }
-}
-
-@media screen and (min-width: 1280px) {
-  #container-general__HomeP2-D {
-    /* border: 2px solid greenyellow; */
-    height: 80vh;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    z-index: 2;
-  }
-  #subContenedorGeneral_HomeP2-D {
-    /* border: 2px solid red; */
-    width: 100%;
-    height: 100%;
-    background-color: #0c0a09;
-    z-index: 10;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-  }
-  .div-interiores__HomeP2-D:nth-child(1) {
-    /*  border: 2px solid red; */
-    z-index: 5;
-    width: 25%;
-    height: 80%;
-    width: 30%;
-    /*   border-top: 2px solid grey; */
-    border-right: 1.5px solid grey;
-    margin-left: 2rem;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -ms-flex-pack: distribute;
-        justify-content: space-around;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-  }
-  .div-interiores__HomeP2-D:nth-child(2) {
-    /* border: 2px solid brown; */
-    width: 65%;
-    height: 80%;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-  }
-  .title-skill__HomeP2-D {
-    color: #a3a3a3;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 1.5rem;
-    -webkit-transition: .5s ease;
-    transition: .5s ease;
-    padding-left: 8px;
-  }
-  .title-skill__HomeP2-D:hover {
-    color: #d4d4d4;
-    cursor: pointer;
-  }
-  .border-left-class {
-    border-left: 1.5px groove #9333ea;
-  }
-  .title-eachSkill__HomeP2-D {
-    color: #a3a3a3;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 1.8rem;
-    position: relative;
-  }
-  .title-eachSkill__HomeP2-D::after {
-    content: '';
-    position: absolute;
-    left: 0;
-    right: 0;
-    bottom: -5px;
-    width: 38%;
-    border-bottom: 3px groove #9333ea;
-    margin: 0 auto;
-  }
-  #container-second-eachSkill__HomeP2-D {
-    /* border: 1px solid red; */
-    width: 100%;
-    height: 100%;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -ms-flex-pack: distribute;
-        justify-content: space-around;
-  }
-  .container-per-each-skill__HomeP2-D {
-    /* border: 1px groove gray; */
-    text-align: center;
-    width: calc(25%);
-    height: 50%;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-  }
-  .elem-nombre__HomeP2-D {
-    color: white;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-weight: 400;
-    font-size: 18px;
-  }
-  .elem-logo__HomeP2-D {
-    margin-bottom: 5px;
-  }
-  .logo-skill:hover {
-    -webkit-transition: .5s ease-in-out;
-    transition: .5s ease-in-out;
-    -webkit-transform: scale(1.2);
-            transform: scale(1.2);
-    cursor: pointer;
-    color: var(--color-hex) !important;
   }
 }
 /*# sourceMappingURL=styles.css.map */
