Modificaciones de estilos en (HOME P1 Desktop) - Resolucion 1280px

--- a/app/styles/partials/_home_p1_desktop.scss
+++ b/app/styles/partials/_home_p1_desktop.scss
@@ -15,8 +15,8 @@
         height: 90vh;
         display: flex;
         align-items: center;
-        justify-content: space-around;
-        padding: 1rem;
+        justify-content: space-between;
+        padding: 0.1rem;
     }
 
     #title-IgnacioARG__HomeP1-DESKTOP {
