--- a/app/styles/partials/_home_p1_desktop.scss
+++ b/app/styles/partials/_home_p1_desktop.scss
@@ -11,19 +11,32 @@
 
 @media screen and (min-width:1280px) {
     #container-general__HomeP1-DESKTOP {
-  /*       border: 2px solid green; */
-        height: 90vh;
+        /* border: 5px solid green; */
+        height: 85vh;
         display: flex;
+        flex-direction: row-reverse;
         align-items: center;
         justify-content: space-between;
-        padding: 0.1rem;
+        padding: 2rem 0;
     }
+
+    
+    #container_tituloYSubtitulos_HomeP1-DESKTOP{
+       /*  border: 2px solid red; */
+        display: flex;
+        flex-direction: column;
+        width: 50%;
+        height: 100%;
+        padding: 1rem;
+    }
+    
 
     #title-IgnacioARG__HomeP1-DESKTOP {
-        font-size: 3.5rem;
-        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        font-size: 4rem;
         font-weight: 500;
         z-index: 3;
+        margin-top: 5rem;
+        width: 100%;
+        text-align: center;
     }
-
 }
