--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -7,6 +7,8 @@
   padding: 0;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  overflow-x: hidden;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 *::-moz-selection {
@@ -622,24 +624,43 @@
 
 @media screen and (min-width: 1280px) {
   #container-general__HomeP1-DESKTOP {
-    /*       border: 2px solid green; */
-    height: 90vh;
+    /* border: 5px solid green; */
+    height: 85vh;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: row-reverse;
+            flex-direction: row-reverse;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
             justify-content: space-between;
-    padding: 0.1rem;
+    padding: 2rem 0;
+  }
+  #container_tituloYSubtitulos_HomeP1-DESKTOP {
+    /*  border: 2px solid red; */
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    width: 50%;
+    height: 100%;
+    padding: 1rem;
   }
   #title-IgnacioARG__HomeP1-DESKTOP {
-    font-size: 3.5rem;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 4rem;
     font-weight: 500;
     z-index: 3;
+    margin-top: 5rem;
+    width: 100%;
+    text-align: center;
   }
 }
 
@@ -1697,14 +1718,15 @@
     gap: 10px;
     display: flex;
     z-index: 2;
+    margin-left: 5rem;
   }
   .image-left__HomeP1-DESKTOP {
     /* border: 2px solid blue; */
-    width: 50%;
+    width: 45%;
     -o-object-fit: cover;
        object-fit: cover;
-    -o-object-position: -75px;
-       object-position: -75px;
+    -o-object-position: -55px;
+       object-position: -55px;
   }
   .image-left__HomeP1-DESKTOP,
   .image-right__HomeP1-DESKTOP {
@@ -1712,8 +1734,9 @@
             filter: grayscale(10%);
   }
   .container-right-flex__HomeP1-DESKTOP:nth-child(2) {
-    /*  border: 2px solid greenyellow; */
+    /* border: 2px solid slateblue; */
     width: 50%;
+    height: 100%;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -1721,7 +1744,7 @@
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    gap: 8px;
+    padding: .5rem;
   }
   .image-right__HomeP1-DESKTOP {
     /* border: 2px solid red; */
@@ -1732,6 +1755,7 @@
     -o-object-fit: cover;
        object-fit: cover;
     height: 50%;
+    padding: .5rem;
   }
 }
 /*# sourceMappingURL=styles.css.map */
