--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -658,7 +658,7 @@
     font-size: 4rem;
     font-weight: 500;
     z-index: 3;
-    margin-top: 5rem;
+    margin-top: 8rem;
     width: 100%;
     text-align: center;
   }
@@ -1194,8 +1194,30 @@
 @media screen and (min-width: 1280px) {
   #contenedor-general__HomeP3-D {
     display: block;
-    border: 2px solid greenyellow;
+    /*   border: 2px solid greenyellow; */
     height: 100vh;
+    padding: 2rem;
+    z-index: 10;
+  }
+  #contenedorProyectos_HomeP3_DESK {
+    /* border: 2px solid skyblue; */
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    margin-top: 2rem;
+    gap: 1rem;
+  }
+  .CardProyecto_HomeP3 {
+    /*  border: 2px solid red; */
+    width: 29rem;
+    height: 25rem;
+    cursor: pointer;
   }
 }
 
