--- a/app/styles/partials/_home_p3_desktop.scss
+++ b/app/styles/partials/_home_p3_desktop.scss
@@ -7,13 +7,13 @@
 @media screen and (min-width:1280px) {
     #contenedor-general__HomeP3-D {
         display: block;
-      /*   border: 2px solid greenyellow; */
+        /*   border: 2px solid greenyellow; */
         height: 100vh;
         padding: 2rem;
         z-index: 10;
     }
 
-    #contenedorProyectos_HomeP3_DESK{
+    #contenedorProyectos_HomeP3_DESK {
         /* border: 2px solid skyblue; */
         display: flex;
         justify-content: center;
@@ -21,11 +21,38 @@
         margin-top: 2rem;
         gap: 1rem;
     }
-    
-    .CardProyecto_HomeP3{
-        /*  border: 2px solid red; */
+
+    .CardProyecto_HomeP3 {
+       /*  border: 2px solid red; */
         width: 29rem;
-        height: 25rem;
+        height: max-content;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
         cursor: pointer;
+    }
+
+    .ImageCard_HomeP3{
+        /* border: 2px solid sandybrown; */
+        width: 100%;
+        height: 24rem;
+    }
+
+    .TituloNombreCard_HomeP3{
+        margin-top: 1rem;
+        font-size: 1.1rem;
+    }
+
+    .ContenedorIconosNavegacion_HomeP3{
+/*         border: 2px solid gold; */
+        display: flex;
+        flex-direction: row-reverse;
+        gap: 1rem;
+        margin-top: .8rem;
+    }
+
+    .cont-ref__Home-P3{
+        height: 2.5rem;
+        width: 2.5rem;
     }
 }
