--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -1216,8 +1216,45 @@
   .CardProyecto_HomeP3 {
     /*  border: 2px solid red; */
     width: 29rem;
-    height: 25rem;
+    height: -webkit-max-content;
+    height: -moz-max-content;
+    height: max-content;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     cursor: pointer;
+  }
+  .ImageCard_HomeP3 {
+    /* border: 2px solid sandybrown; */
+    width: 100%;
+    height: 24rem;
+  }
+  .TituloNombreCard_HomeP3 {
+    margin-top: 1rem;
+    font-size: 1.1rem;
+  }
+  .ContenedorIconosNavegacion_HomeP3 {
+    /*         border: 2px solid gold; */
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: row-reverse;
+            flex-direction: row-reverse;
+    gap: 1rem;
+    margin-top: .8rem;
+  }
+  .cont-ref__Home-P3 {
+    height: 2.5rem;
+    width: 2.5rem;
   }
 }
 
