--- a/app/styles/partials/_home_p2_desktop.scss
+++ b/app/styles/partials/_home_p2_desktop.scss
@@ -6,15 +6,19 @@
     }
 }
 
+
+/* * Macbook Air y Laptops */
 @media screen and (min-width:1280px) {
+    /* Contenedor Padre */
     #container-general__HomeP2-D {
         /* border: 2px solid greenyellow; */
-        height: 80vh;
+        height: 95vh;
         display: flex;
         z-index: 2;
         //?Contenedor general - usado para burlar el z index
     }
 
+    /* Subcontenedor 👀 */
     #subContenedorGeneral_HomeP2-D {
         /* border: 2px solid red; */
         width: 100%;
@@ -22,16 +26,32 @@
         background-color: #0c0a09;
         z-index: 10;
         display: flex;
-        align-items: center;
+        flex-direction: column;
         //! Contenedor general - Por problematicas con z index
     }
 
+    #contenedorTituloIndex_HomeP3 {
+       /*  border: 2px solid lightblue; */
+        width: 100%;
+        height: max-content;
+        display: flex;
+        justify-content: right;
+        padding: 2rem 2rem 0rem 0rem;
+    }
+
+    /* Contenedor donde se encuentran los selectores y los iconos */
+    #contenedorHabilidadesYLogos {
+        display: flex;
+        gap: 2rem;
+        margin-top: 7rem;
+    }
+
+    /* Contenedor con selectores 'Frontend' - 'Backend' */
     .div-interiores__HomeP2-D:nth-child(1) {
-        /*  border: 2px solid red; */
+/*         border: 2px solid red; */
         z-index: 5;
-        width: 25%;
-        height: 80%;
         width: 30%;
+        height: 28rem;
         /*   border-top: 2px solid grey; */
         border-right: 1.5px solid grey;
         margin-left: 2rem;
@@ -45,7 +65,7 @@
     .div-interiores__HomeP2-D:nth-child(2) {
         /* border: 2px solid brown; */
         width: 65%;
-        height: 80%;
+        height: 28rem;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -64,7 +84,7 @@
         cursor: pointer;
     }
 
-    .border-left-class{
+    .border-left-class {
         border-left: 1.5px groove #9333ea;
     }
 
@@ -88,7 +108,7 @@
 
     //? Contenedor donde se renderizan las skills
     #container-second-eachSkill__HomeP2-D {
-        /* border: 1px solid red; */
+        /*  border: 1px solid red; */
         width: 100%;
         height: 100%;
         display: flex;
@@ -97,8 +117,8 @@
         justify-content: space-around;
     }
 
+
     .container-per-each-skill__HomeP2-D {
-        /* border: 1px groove gray; */
         text-align: center;
         width: calc(25%);
         height: 50%;
@@ -126,4 +146,18 @@
         color: var(--color-hex) !important;
     }
 
+    .elemento-activo_HomeP3{
+        color: #a3a3a3;
+        font-size: 1.8rem;
+        transition: .5s ease;
+        padding-left: 8px;
+        transition: .5s ease; /* Animación de 0.5 segundos con aceleración suave */
+        cursor: pointer;
+    }
+
+    .elemento-activo_HomeP3:before {
+        content: "•"; /* El símbolo que quieres mostrar */
+        margin-right: 5px; /* Espacio a la izquierda del punto */
+        color: #6366F1;
+    }
 }
