--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@1,500&display=swap");
 @tailwind base;
 @tailwind components;
@@ -786,15 +787,18 @@
   }
 }
 
+/* * Macbook Air y Laptops */
 @media screen and (min-width: 1280px) {
+  /* Contenedor Padre */
   #container-general__HomeP2-D {
     /* border: 2px solid greenyellow; */
-    height: 80vh;
+    height: 95vh;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
     z-index: 2;
   }
+  /* Subcontenedor 👀 */
   #subContenedorGeneral_HomeP2-D {
     /* border: 2px solid red; */
     width: 100%;
@@ -804,16 +808,39 @@
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
   }
+  #contenedorTituloIndex_HomeP3 {
+    /*  border: 2px solid lightblue; */
+    width: 100%;
+    height: -webkit-max-content;
+    height: -moz-max-content;
+    height: max-content;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: right;
+        -ms-flex-pack: right;
+            justify-content: right;
+    padding: 2rem 2rem 0rem 0rem;
+  }
+  /* Contenedor donde se encuentran los selectores y los iconos */
+  #contenedorHabilidadesYLogos {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    gap: 2rem;
+    margin-top: 7rem;
+  }
+  /* Contenedor con selectores 'Frontend' - 'Backend' */
   .div-interiores__HomeP2-D:nth-child(1) {
-    /*  border: 2px solid red; */
+    /*         border: 2px solid red; */
     z-index: 5;
-    width: 25%;
-    height: 80%;
     width: 30%;
+    height: 28rem;
     /*   border-top: 2px solid grey; */
     border-right: 1.5px solid grey;
     margin-left: 2rem;
@@ -833,7 +860,7 @@
   .div-interiores__HomeP2-D:nth-child(2) {
     /* border: 2px solid brown; */
     width: 65%;
-    height: 80%;
+    height: 28rem;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -877,7 +904,7 @@
     margin: 0 auto;
   }
   #container-second-eachSkill__HomeP2-D {
-    /* border: 1px solid red; */
+    /*  border: 1px solid red; */
     width: 100%;
     height: 100%;
     display: -webkit-box;
@@ -892,7 +919,6 @@
         justify-content: space-around;
   }
   .container-per-each-skill__HomeP2-D {
-    /* border: 1px groove gray; */
     text-align: center;
     width: calc(25%);
     height: 50%;
@@ -926,6 +952,23 @@
             transform: scale(1.2);
     cursor: pointer;
     color: var(--color-hex) !important;
+  }
+  .elemento-activo_HomeP3 {
+    color: #a3a3a3;
+    font-size: 1.8rem;
+    -webkit-transition: .5s ease;
+    transition: .5s ease;
+    padding-left: 8px;
+    transition: .5s ease;
+    /* Animación de 0.5 segundos con aceleración suave */
+    cursor: pointer;
+  }
+  .elemento-activo_HomeP3:before {
+    content: "•";
+    /* El símbolo que quieres mostrar */
+    margin-right: 5px;
+    /* Espacio a la izquierda del punto */
+    color: #6366F1;
   }
 }
 
@@ -1008,7 +1051,6 @@
     text-align: center;
   }
   .cont-ref__Home-P3 {
-    border: 2.5px solid gray;
     border-radius: 50%;
     height: 3rem;
     width: 3rem;
@@ -1131,9 +1173,8 @@
     gap: 1.5rem;
   }
   .cont-ref__Home-P3 {
-    border: 2.5px solid gray;
-    height: 3.2rem;
-    width: 3.2rem;
+    height: 3rem;
+    width: 3rem;
     background-color: rgba(0, 0, 0, 0.925);
   }
   .card-project__Home-P3 {
@@ -1198,6 +1239,7 @@
     height: 100vh;
     padding: 2rem;
     z-index: 10;
+    background-color: #27272a;
   }
   #contenedorProyectos_HomeP3_DESK {
     /* border: 2px solid skyblue; */
@@ -1238,7 +1280,12 @@
   }
   .TituloNombreCard_HomeP3 {
     margin-top: 1rem;
-    font-size: 1.1rem;
+    font-size: 1.2rem;
+    color: whitesmoke;
+  }
+  .TipoProyectoCard_HomeP3 {
+    color: whitesmoke;
+    margin-top: 1.5rem;
   }
   .ContenedorIconosNavegacion_HomeP3 {
     /*         border: 2px solid gold; */
