Add: Primeras modificaciones en componente HomeP4 (Contacto) - Desktop

--- a/app/styles/partials/_home_p2_desktop.scss
+++ b/app/styles/partials/_home_p2_desktop.scss
@@ -147,7 +147,7 @@
     }
 
     .elemento-activo_HomeP3{
-        color: #a3a3a3;
+        color: white;
         font-size: 1.8rem;
         transition: .5s ease;
         padding-left: 8px;
