--- a/app/styles/partials/_formContact.scss
+++ b/app/styles/partials/_formContact.scss
@@ -1,5 +1,6 @@
 //? Inicio de estilos de form contact
 
+/* Android - Mobile */
 @media screen and (min-width:360px) {
     #form-contact__Home-P4 {
         /* border: 2px solid red; */
@@ -44,13 +45,14 @@
     }
 }
 
+/* Tablets */
 @media screen and (min-width:768px) {
     #form-contact__Home-P4 {
         /* border: 2px solid red; */
         margin: 0rem 0;
         width: 80%;
         gap: 1.7rem;
-        padding: 2rem;
+        padding: 0rem;
     }
 
     #form-contact__Home-P4 textarea {
@@ -69,5 +71,38 @@
         width: 50%;
         font-weight: 500;
         font-size: 18px;
+    }
+}
+
+/* Macbook y Laptops */
+@media screen and (min-width:1440px) {
+
+    //* Contenedor general del Formulario
+    #form-contact__Home-P4 {
+        /* border: 2px solid blue; */
+        margin-top: 3rem;
+        padding: 0rem;
+        width: 70%;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-end;
+        justify-content: flex-end;
+        gap: 1.5rem;
+    }
+
+    //* Propiedades de Inputs y TextArea
+    #form-contact__Home-P4 input,
+    textarea {
+        padding: 8px;
+        background-color: #0c0c0cd2;
+        width: 85%;
+        border-radius: 10px 0px 0px 10px;
+    }
+
+    //* Propiedades para Placeholder
+    #form-contact__Home-P4 input,
+    textarea::placeholder {
+        color: white;
+        font-weight: 300;
     }
 }
