--- a/app/styles/partials/_home_p4.scss
+++ b/app/styles/partials/_home_p4.scss
@@ -1,8 +1,10 @@
 //? Estilos Home_P4
 
-@media screen and (min-width:360px) {
+@media screen and (min-width: 360px) {
+
+    //* Contenedor General
     #container-general__Home-P4 {
-        /*  border: 2px solid blue; */
+        /* border: 2px solid blue; */
         background-color: #f1f1f1;
         display: flex;
         flex-direction: column;
@@ -11,65 +13,67 @@
         z-index: 2;
     }
 
+    //* Seccion 1 y 2
+    #seccion-1__HomeP4,
+    #seccion-2__HomeP4 {
+        /*  border: 2px solid green; */
+        width: 100%;
+    }
+
+    //* Contenedor del Titulo Cabecera
+    #container-titleAndLogo__Home-P4 {
+        /*  border: 2px solid red; */
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        /* Alineacion Horizontal  */
+        margin-top: 2rem;
+        margin-bottom: 1rem;
+    }
+
+    //* Propiedades del Titulo
     #titulo-contacto__Home-P4 {
         /* border: 2px solid red; */
         color: #334155;
         font-size: 3.2rem;
-        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+            Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
         font-weight: 200;
         animation: textColor 8s infinite;
-        margin: 1.7rem .4rem 1rem 1rem;
+        margin: 1.7rem 0.4rem 1rem 1rem;
     }
 
-    #container-titleAndLogo__Home-P4 {
-        display: flex;
-        align-items: center;
-    }
-
+    //* Logo Check Celeste
     #logo-contacto__Home-P4 {
         width: 1.6rem;
         height: 1.8rem;
-        margin-top: .9rem;
+        margin-top: 0.9rem;
         color: #06b6d4;
     }
 
+    //* Texto 'Te invito a contactarme'
     #texto-contacto__Home-P4 {
         font-size: 18px;
-        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+            Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
         margin: 0 1rem;
         text-align: center;
         color: #262626;
         font-weight: 700;
     }
-
-    .hr {
-        width: 100%;
-        border: 1.5px solid black;
-        margin: 10px 0;
-    }
-
-    .hr:nth-of-type(1) {
-        width: 70%;
-    }
-
-    .hr:nth-of-type(2) {
-        width: 50%;
-    }
-
-    .hr:nth-of-type(3) {
-        width: 30%;
-        margin-bottom: 2rem;
-    }
 }
 
-@media screen and (min-width:414px) {
+@media screen and (min-width: 414px) {
+
+    //* Contenedor General
     #container-general__Home-P4 {
         min-height: 10vh;
     }
 }
 
-@media screen and (min-width:768px) {
+@media screen and (min-width: 768px) {
 
+    //* Propiedades del Titulo
     #titulo-contacto__Home-P4 {
         /* border: 2px solid red; */
         color: #334155;
@@ -77,25 +81,63 @@
         margin-top: 1.9rem;
     }
 
-    .hr {
-        border: 2px solid black;
-        margin: 15px 0;
-    }
-
-    .hr:nth-of-type(1) {
-        width: 55%;
-    }
-
-    .hr:nth-of-type(2) {
-        width: 35%;
-    }
-
-    .hr:nth-of-type(3) {
-        width: 15%;
-        margin-bottom: 2rem;
-    }
-
     #texto-contacto__Home-P4 {
         font-size: 22px;
+    }
+}
+
+/* Macbook y Laptops */
+@media screen and (min-width: 1440px) {
+
+    //* Contenedor General
+    #container-general__Home-P4 {
+        height: 100vh;
+        flex-direction: row-reverse;
+    }
+
+    //* Seccion 1 y 2
+    #seccion-1__HomeP4,
+    #seccion-2__HomeP4 {
+        height: 100%;
+        /* border: 2px solid green; */
+    }
+
+    /* 1 */
+    #seccion-1__HomeP4 {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-end;
+        gap: 1rem;
+    }
+
+    /* 2 */
+    #seccion-2__HomeP4 {
+        display: flex;
+        flex-direction: column-reverse;
+        justify-content: center;
+        align-items: center;
+        gap: 1.2rem;
+    }
+
+    //* Contenedor del Titulo Cabecera
+    #container-titleAndLogo__Home-P4 {
+        /*  border: 2px solid red; */
+        width: 100%;
+        justify-content: flex-end;
+        padding-right: 2rem;
+    }
+
+    // * Texto 'Te Invito' 
+    #texto-contacto__Home-P4 {
+        font-size: 22px;
+        font-weight: 300;
+    }
+
+    // * Subtitulo 'El mail sera respondido a la brevedad'
+    #TituloEmail__HomeP4 {
+        font-weight: bold;
+        margin: 1rem 0;
+        align-self: flex-start;
+        margin-left: 8rem;
     }
 }
