--- a/app/styles/partials/_socialMediaGrid.scss
+++ b/app/styles/partials/_socialMediaGrid.scss
@@ -8,6 +8,7 @@
      justify-content: center;
      align-items: center;
      gap: .4rem;
+     padding: 1rem;
  }
 
  .item-grid-socialMedia__Home-P4 {
