--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -954,7 +954,7 @@
     color: var(--color-hex) !important;
   }
   .elemento-activo_HomeP3 {
-    color: #a3a3a3;
+    color: white;
     font-size: 1.8rem;
     -webkit-transition: .5s ease;
     transition: .5s ease;
@@ -1307,7 +1307,7 @@
 
 @media screen and (min-width: 360px) {
   #container-general__Home-P4 {
-    /*  border: 2px solid blue; */
+    /* border: 2px solid blue; */
     background-color: #f1f1f1;
     display: -webkit-box;
     display: -ms-flexbox;
@@ -1322,52 +1322,49 @@
     min-height: 125vh;
     z-index: 2;
   }
-  #titulo-contacto__Home-P4 {
-    /* border: 2px solid red; */
-    color: #334155;
-    font-size: 3.2rem;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-weight: 200;
-    -webkit-animation: textColor 8s infinite;
-            animation: textColor 8s infinite;
-    margin: 1.7rem .4rem 1rem 1rem;
+  #seccion-1__HomeP4,
+  #seccion-2__HomeP4 {
+    /*  border: 2px solid green; */
+    width: 100%;
   }
   #container-titleAndLogo__Home-P4 {
+    /*  border: 2px solid red; */
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    /* Alineacion Horizontal  */
+    margin-top: 2rem;
+    margin-bottom: 1rem;
+  }
+  #titulo-contacto__Home-P4 {
+    /* border: 2px solid red; */
+    color: #334155;
+    font-size: 3.2rem;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+    font-weight: 200;
+    -webkit-animation: textColor 8s infinite;
+            animation: textColor 8s infinite;
+    margin: 1.7rem 0.4rem 1rem 1rem;
   }
   #logo-contacto__Home-P4 {
     width: 1.6rem;
     height: 1.8rem;
-    margin-top: .9rem;
+    margin-top: 0.9rem;
     color: #06b6d4;
   }
   #texto-contacto__Home-P4 {
     font-size: 18px;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
     margin: 0 1rem;
     text-align: center;
     color: #262626;
     font-weight: 700;
-  }
-  .hr {
-    width: 100%;
-    border: 1.5px solid black;
-    margin: 10px 0;
-  }
-  .hr:nth-of-type(1) {
-    width: 70%;
-  }
-  .hr:nth-of-type(2) {
-    width: 50%;
-  }
-  .hr:nth-of-type(3) {
-    width: 30%;
-    margin-bottom: 2rem;
   }
 }
 
@@ -1384,25 +1381,78 @@
     font-size: 3.5rem;
     margin-top: 1.9rem;
   }
-  .hr {
-    border: 2px solid black;
-    margin: 15px 0;
-  }
-  .hr:nth-of-type(1) {
-    width: 55%;
-  }
-  .hr:nth-of-type(2) {
-    width: 35%;
-  }
-  .hr:nth-of-type(3) {
-    width: 15%;
-    margin-bottom: 2rem;
-  }
   #texto-contacto__Home-P4 {
     font-size: 22px;
   }
 }
 
+/* Macbook y Laptops */
+@media screen and (min-width: 1440px) {
+  #container-general__Home-P4 {
+    height: 100vh;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: row-reverse;
+            flex-direction: row-reverse;
+  }
+  #seccion-1__HomeP4,
+  #seccion-2__HomeP4 {
+    height: 100%;
+    /* border: 2px solid green; */
+  }
+  /* 1 */
+  #seccion-1__HomeP4 {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: end;
+        -ms-flex-align: end;
+            align-items: flex-end;
+    gap: 1rem;
+  }
+  /* 2 */
+  #seccion-2__HomeP4 {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    gap: 1.2rem;
+  }
+  #container-titleAndLogo__Home-P4 {
+    /*  border: 2px solid red; */
+    width: 100%;
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
+    padding-right: 2rem;
+  }
+  #texto-contacto__Home-P4 {
+    font-size: 22px;
+    font-weight: 300;
+  }
+  #TituloEmail__HomeP4 {
+    font-weight: bold;
+    margin: 1rem 0;
+    -ms-flex-item-align: start;
+        align-self: flex-start;
+    margin-left: 8rem;
+  }
+}
+
+/* Android - Mobile */
 @media screen and (min-width: 360px) {
   #form-contact__Home-P4 {
     /* border: 2px solid red; */
@@ -1471,13 +1521,14 @@
   }
 }
 
+/* Tablets */
 @media screen and (min-width: 768px) {
   #form-contact__Home-P4 {
     /* border: 2px solid red; */
     margin: 0rem 0;
     width: 80%;
     gap: 1.7rem;
-    padding: 2rem;
+    padding: 0rem;
   }
   #form-contact__Home-P4 textarea {
     height: 17rem;
@@ -1514,6 +1565,57 @@
   }
 }
 
+/* Macbook y Laptops */
+@media screen and (min-width: 1440px) {
+  #form-contact__Home-P4 {
+    /* border: 2px solid blue; */
+    margin-top: 3rem;
+    padding: 0rem;
+    width: 70%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: end;
+        -ms-flex-align: end;
+            align-items: flex-end;
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
+    gap: 1.5rem;
+  }
+  #form-contact__Home-P4 input,
+  textarea {
+    padding: 8px;
+    background-color: #0c0c0cd2;
+    width: 85%;
+    border-radius: 10px 0px 0px 10px;
+  }
+  #form-contact__Home-P4 input,
+  textarea::-webkit-input-placeholder {
+    color: white;
+    font-weight: 300;
+  }
+  #form-contact__Home-P4 input,
+  textarea:-ms-input-placeholder {
+    color: white;
+    font-weight: 300;
+  }
+  #form-contact__Home-P4 input,
+  textarea::-ms-input-placeholder {
+    color: white;
+    font-weight: 300;
+  }
+  #form-contact__Home-P4 input,
+  textarea::placeholder {
+    color: white;
+    font-weight: 300;
+  }
+}
+
 /* Estilos del componente 'Social Media Grid' */
 .contenedor-grid-socialMedia__Home-P4 {
   /* border: 2px solid blue; */
@@ -1533,6 +1635,7 @@
       -ms-flex-align: center;
           align-items: center;
   gap: .4rem;
+  padding: 1rem;
 }
 
 .item-grid-socialMedia__Home-P4 {
