--- a/app/styles/partials/_formContact.scss
+++ b/app/styles/partials/_formContact.scss
@@ -82,27 +82,28 @@
         /* border: 2px solid blue; */
         margin-top: 3rem;
         padding: 0rem;
-        width: 70%;
+        width: 80%;
         display: flex;
         flex-direction: column;
-        align-items: flex-end;
-        justify-content: flex-end;
+        align-items: center;
+        justify-content: center;
         gap: 1.5rem;
     }
 
     //* Propiedades de Inputs y TextArea
     #form-contact__Home-P4 input,
     textarea {
-        padding: 8px;
+        padding: 15px;
         background-color: #0c0c0cd2;
         width: 85%;
-        border-radius: 10px 0px 0px 10px;
+        border-radius: 10px;
     }
 
     //* Propiedades para Placeholder
-    #form-contact__Home-P4 input,
+    #form-contact__Home-P4 input::placeholder,
     textarea::placeholder {
         color: white;
         font-weight: 300;
+        font-size: 15px;
     }
 }
