--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -626,7 +626,7 @@
 @media screen and (min-width: 1280px) {
   #container-general__HomeP1-DESKTOP {
     /* border: 5px solid green; */
-    height: 85vh;
+    height: 95vh;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -1391,9 +1391,9 @@
   #container-general__Home-P4 {
     height: 100vh;
     -webkit-box-orient: horizontal;
-    -webkit-box-direction: reverse;
-        -ms-flex-direction: row-reverse;
-            flex-direction: row-reverse;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
   }
   #seccion-1__HomeP4,
   #seccion-2__HomeP4 {
@@ -1412,20 +1412,20 @@
     -webkit-box-align: end;
         -ms-flex-align: end;
             align-items: flex-end;
-    gap: 1rem;
   }
   /* 2 */
   #seccion-2__HomeP4 {
+    /*   border: 2px solid seagreen; */
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
     -webkit-box-orient: vertical;
-    -webkit-box-direction: reverse;
-        -ms-flex-direction: column-reverse;
-            flex-direction: column-reverse;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
@@ -1442,13 +1442,6 @@
   #texto-contacto__Home-P4 {
     font-size: 22px;
     font-weight: 300;
-  }
-  #TituloEmail__HomeP4 {
-    font-weight: bold;
-    margin: 1rem 0;
-    -ms-flex-item-align: start;
-        align-self: flex-start;
-    margin-left: 8rem;
   }
 }
 
@@ -1571,7 +1564,7 @@
     /* border: 2px solid blue; */
     margin-top: 3rem;
     padding: 0rem;
-    width: 70%;
+    width: 80%;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -1579,136 +1572,134 @@
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    -webkit-box-align: end;
-        -ms-flex-align: end;
-            align-items: flex-end;
-    -webkit-box-pack: end;
-        -ms-flex-pack: end;
-            justify-content: flex-end;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     gap: 1.5rem;
   }
   #form-contact__Home-P4 input,
   textarea {
-    padding: 8px;
+    padding: 15px;
     background-color: #0c0c0cd2;
     width: 85%;
-    border-radius: 10px 0px 0px 10px;
+    border-radius: 10px;
   }
-  #form-contact__Home-P4 input,
+  #form-contact__Home-P4 input::-webkit-input-placeholder,
   textarea::-webkit-input-placeholder {
     color: white;
     font-weight: 300;
+    font-size: 15px;
   }
-  #form-contact__Home-P4 input,
+  #form-contact__Home-P4 input:-ms-input-placeholder,
   textarea:-ms-input-placeholder {
     color: white;
     font-weight: 300;
+    font-size: 15px;
   }
-  #form-contact__Home-P4 input,
+  #form-contact__Home-P4 input::-ms-input-placeholder,
   textarea::-ms-input-placeholder {
     color: white;
     font-weight: 300;
+    font-size: 15px;
   }
-  #form-contact__Home-P4 input,
+  #form-contact__Home-P4 input::placeholder,
   textarea::placeholder {
     color: white;
     font-weight: 300;
+    font-size: 15px;
   }
 }
 
-/* Estilos del componente 'Social Media Grid' */
-.contenedor-grid-socialMedia__Home-P4 {
-  /* border: 2px solid blue; */
-  margin: 1.5rem 0;
-  width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  gap: .4rem;
-  padding: 1rem;
+/* Android - Mobile */
+@media screen and (min-width: 360px) {
+  .contenedor-grid-socialMedia__Home-P4 {
+    /* border: 2px solid blue; */
+    margin: 1.5rem 0;
+    width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    gap: .4rem;
+    padding: 1rem;
+  }
+  .item-grid-socialMedia__Home-P4 {
+    /*  border: 2px solid red; */
+    background-color: #111111e0;
+    padding: 10px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    gap: .1rem;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    text-decoration: none;
+    border-radius: 15px;
+    width: 95%;
+  }
+  .cont-logo-socialMed__Home-P4 {
+    /* border: 2px solid green; */
+    padding: 9px;
+    border-radius: 50%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .logo-socialMedia__Home-P4 {
+    /* border: 2px solid red; */
+    width: 1.8rem;
+    height: 1.8rem;
+  }
+  .item-grid-socialMedia__Home-P4 h3 {
+    /*  border: 2px solid red; */
+    font-weight: 600;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 14px;
+    margin-top: 10px;
+  }
+  .text-instagram {
+    background-image: -webkit-gradient(linear, left top, right top, from(#D64EC1), color-stop(#9e2a91), color-stop(#9833ac), color-stop(#c13584), color-stop(#D64EC1), to(#833ab4));
+    background-image: linear-gradient(to right, #D64EC1, #9e2a91, #9833ac, #c13584, #D64EC1, #833ab4);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    text-fill-color: transparent;
+  }
+  /* Estilos para cada contenedor de Social Media */
+  .item-grid-socialMedia__Home-P4:nth-child(1) {
+    color: #C5439D;
+  }
+  .item-grid-socialMedia__Home-P4:nth-child(2) {
+    color: #2B7DBE;
+  }
+  .item-grid-socialMedia__Home-P4:nth-child(3) {
+    color: #cacaca;
+  }
+  .item-grid-socialMedia__Home-P4:nth-child(4) {
+    color: #64C351;
+  }
 }
 
-.item-grid-socialMedia__Home-P4 {
-  /*  border: 2px solid red; */
-  background-color: #111111e0;
-  padding: 10px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  gap: .1rem;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  text-decoration: none;
-  border-radius: 15px;
-  width: 95%;
-}
-
-.cont-logo-socialMed__Home-P4 {
-  /* border: 2px solid green; */
-  padding: 9px;
-  border-radius: 50%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.logo-socialMedia__Home-P4 {
-  /* border: 2px solid red; */
-  width: 1.8rem;
-  height: 1.8rem;
-}
-
-.item-grid-socialMedia__Home-P4 h3 {
-  /*  border: 2px solid red; */
-  font-weight: 600;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  font-size: 14px;
-  margin-top: 10px;
-}
-
-.text-instagram {
-  background-image: -webkit-gradient(linear, left top, right top, from(#D64EC1), color-stop(#9e2a91), color-stop(#9833ac), color-stop(#c13584), color-stop(#D64EC1), to(#833ab4));
-  background-image: linear-gradient(to right, #D64EC1, #9e2a91, #9833ac, #c13584, #D64EC1, #833ab4);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  background-clip: text;
-  text-fill-color: transparent;
-}
-
-/* Estilos para cada contenedor de Social Media */
-.item-grid-socialMedia__Home-P4:nth-child(1) {
-  color: #C5439D;
-}
-
-.item-grid-socialMedia__Home-P4:nth-child(2) {
-  color: #2B7DBE;
-}
-
-.item-grid-socialMedia__Home-P4:nth-child(3) {
-  color: #cacaca;
-}
-
-.item-grid-socialMedia__Home-P4:nth-child(4) {
-  color: #64C351;
-}
-
+/* Tablets */
 @media screen and (min-width: 768px) {
   .contenedor-grid-socialMedia__Home-P4 {
     /*  border: 2px solid blue; */
@@ -1736,21 +1727,67 @@
             justify-content: center;
     width: 38%;
     height: 13rem;
-    -webkit-transition: .5s ease-in-out;
-    transition: .5s ease-in-out;
+    -webkit-transition: .3s ease;
+    transition: .3s ease;
   }
   .item-grid-socialMedia__Home-P4:hover {
     background-color: #111111d5;
   }
   .item-grid-socialMedia__Home-P4 h3 {
     /*  border: 2px solid red; */
-    font-weight: 600;
+    font-weight: 300;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 22px;
     margin-top: 10px;
   }
   .item-grid-socialMedia__Home-P4:nth-child(2) {
     margin-top: 5px;
+  }
+}
+
+/* Macbook y Laptops */
+@media screen and (min-width: 1440px) {
+  .contenedor-grid-socialMedia__Home-P4 {
+    /* border: 2px solid skyblue; */
+    width: 70%;
+    padding: 1rem;
+    margin: 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    gap: .6rem;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+    -webkit-box-align: end;
+        -ms-flex-align: end;
+            align-items: flex-end;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+  .item-grid-socialMedia__Home-P4 {
+    /* border: 2px solid red; */
+    width: 13rem;
+    height: 11rem;
+    /* Neumorfismo */
+    border-radius: 30px;
+    background: #292929;
+    -webkit-box-shadow: inset 20px 20px 60px #222222, inset -20px -20px 60px #303030;
+            box-shadow: inset 20px 20px 60px #222222, inset -20px -20px 60px #303030;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .item-grid-socialMedia__Home-P4:hover {
+    background: #1c1c1c;
+    -webkit-box-shadow: inset 11px 11px 22px #121212, inset -11px -11px 22px #262626;
+            box-shadow: inset 11px 11px 22px #121212, inset -11px -11px 22px #262626;
+  }
+  .item-grid-socialMedia__Home-P4 h3 {
+    /*  border: 2px solid red; */
+    margin-top: 0px;
+    font-size: 18px;
   }
 }
 
