--- a/app/styles/partials/_socialMediaGrid.scss
+++ b/app/styles/partials/_socialMediaGrid.scss
@@ -143,6 +143,7 @@
         justify-content: flex-start;
         align-items: flex-end;
         flex-wrap: wrap;
+        margin-top: 2rem;
     }
 
     //* Contenedor de cada Social Media
