feat: modificaciones en el orden de componentes de home, mejoras en formulario y mejoras de estilos

--- a/app/styles/partials/_formContact.scss
+++ b/app/styles/partials/_formContact.scss
@@ -97,16 +97,31 @@
     textarea {
         padding: 15px;
         width: 85%;
-        color: black;
         border-radius: 0;
-        border-bottom: 1px solid white;
+        border-left: 1px solid white;
         background-blend-mode: multiply;
         background-color: rgba(255, 255, 255, 0);
+    }
+
+    #form-contact__Home-P4 input:focus {
+        outline: none;
+        border: none;
+        border-left: 1px solid white;
+        border-bottom: 1px solid white;
     }
 
     // * Propiedades para el textarea
     textarea {
         border: 1px solid white;
+        border-radius: 2px;
+        height: 14rem;
+        max-height: 15rem;
+        min-height: 205;
+    }
+
+    textarea:focus {
+        box-shadow: 0 0 7px rgba(255, 255, 255, 0.5);
+        outline: none;
     }
 
     //* Propiedades para Placeholder
@@ -123,6 +138,6 @@
         width: 50%;
         font-weight: 400;
         margin-top: 2rem;
-        background-color: red;
+        background-color: var(--color--principal);
     }
 }
