--- a/app/styles/partials/_home_p3_desktop.scss
+++ b/app/styles/partials/_home_p3_desktop.scss
@@ -5,13 +5,46 @@
 }
 
 @media screen and (min-width:1280px) {
+
+    //Animacion Background
+
+    @keyframes backgroundToBlack {
+        0% {
+            background-color: transparent;
+        }
+
+        25% {
+            background-color: rgba(43, 43, 42, 0.1);
+            /* Transparente con un ligero tinte */
+        }
+
+        50% {
+            background-color: rgba(43, 43, 42, 0.3);
+            /* Aumenta la opacidad */
+        }
+
+        75% {
+            background-color: rgba(43, 43, 42, 0.5);
+            /* Aumenta aún más la opacidad */
+        }
+
+        100% {
+            background-blend-mode: multiply;
+            background-color: #27272a44;
+        }
+    }
+
+
     #contenedor-general__HomeP3-D {
         display: block;
         /*   border: 2px solid greenyellow; */
         height: 100vh;
         padding: 2rem;
         z-index: 10;
-        background-color: #27272a;
+        background-image: url(https://marketplace.canva.com/OOWzI/MAEX42OOWzI/1/s2/canva-black-wall-background-MAEX42OOWzI.jpg);
+        background-size: cover;
+        transition: 1s ease-in-out;
+        animation: backgroundToBlack 3s ease infinite normal reverse;
     }
 
     #contenedorProyectos_HomeP3_DESK {
