--- a/app/styles/partials/_home_p4.scss
+++ b/app/styles/partials/_home_p4.scss
@@ -114,7 +114,7 @@
         background-position-y: top;
         background-size: cover;
         background-blend-mode: multiply;
-        background-color: rgba(0, 0, 0, 0.727);
+        background-color: rgba(0, 0, 0, 0.627);
     }
 
     /* 2 */
@@ -153,7 +153,7 @@
 
     //* Clase NEGRITA
     .B-Negrita{
-        color: red;
+        color: var(--color--principal);
         font-weight: bold;
     }
 }
